# Sm0l-HDL

./: README.md
Circuiti/: circuito_comb1.txt  circuito_comb2.txt  circuito_comb3.txt  circuito_comb4.txt  circuito_comb5.txt  circuito_comb6.txt  circuito_composto1.txt  circuito_composto2.txt  circuito_sequenziale1.txt  circuito_sequenziale2.txt  circuito_sequenziale3.txt  circuito_sequenziale4.txt  circuito_sequenziale5.txt
Inputs/: circuito_comb1.txt  circuito_comb2.txt  circuito_comb3.txt  circuito_comb4.txt  circuito_comb5.txt  circuito_comb6.txt  circuito_composto1.txt  circuito_composto2.txt  circuito_sequenziale1.txt  circuito_sequenziale2.txt  circuito_sequenziale3.txt  circuito_sequenziale4.txt  circuito_sequenziale5.txt
cmake/: CMakeLists.txt
src/: Boolean_Translator.cpp  Boolean_Translator.h  Circuit.cpp  Circuit.h  Component.h  Components_List.cpp  Components_List.h  Flip_Flop.cpp  Flip_Flop.h  In_Out.cpp  In_Out.h  Parser_Helper.cpp  main.cpp
